Fixed minor alignment issue of the edit popover pointer.

--- a/datetime-range.css
+++ b/datetime-range.css
@@ -118,7 +118,7 @@
   background-color: #efefef;
   width: 1em;
   height: 1em;
-  top: -0.575em;
+  top: -0.585em;
   border-color: #ccc;
   border-style: solid;
   border-width: 1px 1px 0 0;
